// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordValidation > should render 1`] = `
<DocumentFragment>
  <fieldset
    class="flex min-w-0 flex-col css-1bcidjh"
  >
    <label
      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
      data-testid="FormLabel"
      for="password"
    >
      password
      <span
        class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
        data-testid="FormLabel__optional"
      >
        optional
      </span>
    </label>
    <div
      class="css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          aria-invalid="false"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="PasswordValidation__password"
          name="password"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <button
            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="InputPassword__toggle"
            type="button"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="eye"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                  />
                  <path
                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                  />
                </g>
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </fieldset>
  <fieldset
    class="flex min-w-0 flex-col css-1bcidjh"
  >
    <label
      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
      data-testid="FormLabel"
      for="confirmPassword"
    >
      confirmPassword
      <span
        class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
        data-testid="FormLabel__optional"
      >
        optional
      </span>
    </label>
    <div
      class="css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="PasswordValidation__confirmPassword"
          name="confirmPassword"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <button
            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="InputPassword__toggle"
            type="button"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="eye"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                  />
                  <path
                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                  />
                </g>
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`PasswordValidation > should render password rules 1`] = `
<DocumentFragment>
  <fieldset
    class="flex min-w-0 flex-col css-1bcidjh"
  >
    <label
      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
      data-testid="FormLabel"
      for="password"
    >
      password
    </label>
    <div
      class="css-12mz4i6"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="PasswordValidation__password"
          name="password"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
        <div
          class="pl-3"
        >
          <button
            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="InputPassword__toggle"
            type="button"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="eye"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                  />
                  <path
                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                  />
                </g>
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </fieldset>
  <div
    class="space-y-4"
    data-testid="Rules"
  >
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 bg-theme-success-200 dark:bg-theme-success-900"
      >
        <div
          class="css-1w6w9jw"
          height="8"
          width="8"
        >
          <svg
            id="check-mark-small"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </span>
      <span
        class="text-sm font-semibold text-theme-success-600"
      >
        One lowercase character
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 border-2 border-theme-secondary-600"
      />
      <span
        class="text-sm font-semibold text-theme-secondary-600"
      >
        One uppercase character
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 border-2 border-theme-secondary-600"
      />
      <span
        class="text-sm font-semibold text-theme-secondary-600"
      >
        One number
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 border-2 border-theme-secondary-600"
      />
      <span
        class="text-sm font-semibold text-theme-secondary-600"
      >
        One special character
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 bg-theme-success-200 dark:bg-theme-success-900"
      >
        <div
          class="css-1w6w9jw"
          height="8"
          width="8"
        >
          <svg
            id="check-mark-small"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </span>
      <span
        class="text-sm font-semibold text-theme-success-600"
      >
        8 characters minimum
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 bg-theme-success-200 dark:bg-theme-success-900"
      >
        <div
          class="css-1w6w9jw"
          height="8"
          width="8"
        >
          <svg
            id="check-mark-small"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </span>
      <span
        class="text-sm font-semibold text-theme-success-600"
      >
        No match in leaked database
      </span>
    </div>
  </div>
  <fieldset
    class="flex min-w-0 flex-col css-5kz4tk"
  >
    <label
      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
      data-testid="FormLabel"
      for="confirmPassword"
    >
      confirmPassword
    </label>
    <div
      class="css-12mz4i6"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="PasswordValidation__confirmPassword"
          name="confirmPassword"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <span
          data-errortext="Passwords do not match"
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
        <div
          class="pl-3"
        >
          <button
            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="InputPassword__toggle"
            type="button"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="eye"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                  />
                  <path
                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                  />
                </g>
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`PasswordValidation > should render password rules 2`] = `
<DocumentFragment>
  <fieldset
    class="flex min-w-0 flex-col css-1bcidjh"
  >
    <label
      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
      data-testid="FormLabel"
      for="password"
    >
      password
      <span
        class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
        data-testid="FormLabel__optional"
      >
        optional
      </span>
    </label>
    <div
      class="css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          aria-invalid="false"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="PasswordValidation__password"
          name="password"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <button
            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="InputPassword__toggle"
            type="button"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="eye"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                  />
                  <path
                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                  />
                </g>
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </fieldset>
  <fieldset
    class="flex min-w-0 flex-col css-1bcidjh"
  >
    <label
      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
      data-testid="FormLabel"
      for="confirmPassword"
    >
      confirmPassword
      <span
        class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
        data-testid="FormLabel__optional"
      >
        optional
      </span>
    </label>
    <div
      class="css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="PasswordValidation__confirmPassword"
          name="confirmPassword"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <button
            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="InputPassword__toggle"
            type="button"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="eye"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                  />
                  <path
                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                  />
                </g>
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;

exports[`PasswordValidation > should render password rules using current password 1`] = `
<DocumentFragment>
  <fieldset
    class="flex min-w-0 flex-col css-1bcidjh"
  >
    <div
      class="css-n1b0kl"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="PasswordValidation__currentPassword"
          name="currentPassword"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <button
            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="InputPassword__toggle"
            type="button"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="eye"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                  />
                  <path
                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                  />
                </g>
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </fieldset>
  <fieldset
    class="flex min-w-0 flex-col css-1bcidjh"
  >
    <label
      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
      data-testid="FormLabel"
      for="password"
    >
      password
    </label>
    <div
      class="css-12mz4i6"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="PasswordValidation__password"
          name="password"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
        <div
          class="pl-3"
        >
          <button
            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="InputPassword__toggle"
            type="button"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="eye"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                  />
                  <path
                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                  />
                </g>
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </fieldset>
  <div
    class="space-y-4"
    data-testid="Rules"
  >
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 bg-theme-success-200 dark:bg-theme-success-900"
      >
        <div
          class="css-1w6w9jw"
          height="8"
          width="8"
        >
          <svg
            id="check-mark-small"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </span>
      <span
        class="text-sm font-semibold text-theme-success-600"
      >
        One lowercase character
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 border-2 border-theme-secondary-600"
      />
      <span
        class="text-sm font-semibold text-theme-secondary-600"
      >
        One uppercase character
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 border-2 border-theme-secondary-600"
      />
      <span
        class="text-sm font-semibold text-theme-secondary-600"
      >
        One number
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 border-2 border-theme-secondary-600"
      />
      <span
        class="text-sm font-semibold text-theme-secondary-600"
      >
        One special character
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 bg-theme-success-200 dark:bg-theme-success-900"
      >
        <div
          class="css-1w6w9jw"
          height="8"
          width="8"
        >
          <svg
            id="check-mark-small"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </span>
      <span
        class="text-sm font-semibold text-theme-success-600"
      >
        8 characters minimum
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 bg-theme-success-200 dark:bg-theme-success-900"
      >
        <div
          class="css-1w6w9jw"
          height="8"
          width="8"
        >
          <svg
            id="check-mark-small"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </span>
      <span
        class="text-sm font-semibold text-theme-success-600"
      >
        No match in leaked database
      </span>
    </div>
    <div
      class="flex items-center space-x-2"
    >
      <span
        class="flex h-5 w-5 shrink-0 items-center justify-center rounded-full text-theme-success-500 bg-theme-success-200 dark:bg-theme-success-900"
      >
        <div
          class="css-1w6w9jw"
          height="8"
          width="8"
        >
          <svg
            id="check-mark-small"
            viewBox="0 0 10 10"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <path
              d="M9 1L3.444 8.658c-.222.337-.666.45-1 .225l-.11-.113L1 7.194"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
      </span>
      <span
        class="text-sm font-semibold text-theme-success-600"
      >
        Different from current password
      </span>
    </div>
  </div>
  <fieldset
    class="flex min-w-0 flex-col css-5kz4tk"
  >
    <label
      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
      data-testid="FormLabel"
      for="confirmPassword"
    >
      confirmPassword
    </label>
    <div
      class="css-12mz4i6"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="no-ligatures w-full border-none css-1vs1awz"
          data-testid="PasswordValidation__confirmPassword"
          name="confirmPassword"
          type="password"
          value=""
        />
      </div>
      <div
        class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <span
          data-errortext="Confirm Password required"
          data-testid="Input__error"
        >
          <div
            class="text-theme-danger-500 css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg
              id="circle-exclamation-mark"
              viewBox="0 0 20 20"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-width="2"
              >
                <circle
                  cx="10"
                  cy="10"
                  r="9"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 10.5v-5"
                  stroke-linecap="round"
                  stroke-miterlimit="10"
                />
                <path
                  d="M10 14h0"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </g>
            </svg>
          </div>
        </span>
        <div
          class="pl-3"
        >
          <button
            class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
            data-ring-focus-margin="-m-1"
            data-testid="InputPassword__toggle"
            type="button"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="eye"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                  />
                  <path
                    d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                  />
                </g>
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </fieldset>
</DocumentFragment>
`;
